[package]
name = "trufflehunter"
description = "log searching utility"
version = "0.1.1"
authors = ["dfhoughton <dfhoughton@gmail.com>"]
edition = "2018"
homepage = "https://github.com/dfhoughton/trufflehunter"
repository = "https://github.com/dfhoughton/trufflehunter"
documentation = "https://docs.rs/trufflehunter"
readme = "README.md"
keywords = [ "log", "search" ]
categories = [ "command-line-utilities", "filesystem" ]
license = "GPL-2.0"

[profile.release]
panic = "abort"

[[bin]]
name = "hun"
path = "src/main.rs"

[dependencies]

clap = "2"
larry = "0"
two_timer = "1"
chrono = "0.4"
regex = "1"

[dev-dependencies]
lazy_static = "1.2.0"
rand = "0.6"
